se agrego jquery

--- a/ejercicios/01_test.html
+++ b/ejercicios/01_test.html
@@ -5,11 +5,13 @@
 	<body>
 		<div>
 			<button id="btn1">BTN1</button>
+			<button id="btn2">BTN2</button>
 		</div>
 		<h1>This is my first Header 1</h1>
 		<p> this is a prargrapgh that talks about HTML</p>
 		<h2> and here is the Header 2</h2>
 		<div id='jsDiv'></div>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 		<script type="text/javascript" src="js/sample.js"></script>
 	</body>
 </html>
