--- a/NDB_00_SYSTEM/__empty__/JC_WSRD/index.html
+++ b/NDB_00_SYSTEM/__empty__/JC_WSRD/index.html
@@ -4,13 +4,18 @@
 	</head>
 	<body>
 		<div>
-			<button id="btn1">BTN1</button>
-			<button id="btn2">BTN2</button>
+			<button id="btn1">XSJS</button>
+			<button id="btn2">ODATA</button>
 		</div>
 		<h1>This is my first Header 1</h1>
-		<p> this is a prargrapgh that talks about HTML</p>
+		<p> this is a paragraph that talks about HTML</p>
 		<h2> and here is the Header 2</h2>
 		<div id='jsDiv'></div>
+		
+		<table id= "resultTable">
+		<thead></thead>
+		<tbody></tbody>
+		</table>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 		<script type="text/javascript" src="js/sample.js"></script>
 	</body>
