--- a/NDB_00_SYSTEM/__empty__/JC_WSRD/index.html
+++ b/NDB_00_SYSTEM/__empty__/JC_WSRD/index.html
@@ -7,6 +7,7 @@
 			<button id="btn1">XSJS</button>
 			<button id="btn2">ODATA</button>
 			<button id="btn3">ENV</button>
+			<button id="btn4">Get Total Sales UDQ</button>
 		</div>
 		<h1>This is my first Header 1</h1>
 		<p> this is a paragraph that talks about HTML</p>
